Première mise en ligne

--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,10 @@
         <title>CocoPeps futur Dév ?</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-
-        <body>
+        <header> <!--Ici c'est l'entete de page-->
+            Entête de page ici
+        </header>
+        <body><!--ici c'est tout le contenu de la page-->
             <h1>Bientôt le meilleur (ou pas ...)</h1>
         
         </body>
