--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
-    
     <head>
         <meta charset="utf-8">
         <title>CocoPeps futur Dév ?</title>
         <link rel="stylesheet" href="styles.css">
     </head>
         <header> <!--Ici c'est l'entete de page-->
-            Entête de page ici
+            <a href="a-propos.html">A propos</a>
         </header>
         <body><!--ici c'est tout le contenu de la page-->
             <h1>Bientôt le meilleur (ou pas ...)</h1>
-        
         </body>
 </html>
