--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>CocoPeps futur Dév ?</title>
-        <link rel="stylesheet" href="styles.css">
+        <title>CocoPeps Acceuil</title>
+        <link rel="stylesheet" href="style/style.css">
     </head>
         <header> <!--Ici c'est l'entete de page-->
+        <nav><!--utile pour préciser la barre de navigation-->
+            <img src="images/logo_cocopepsx45.png" alt="Logo CocoPeps" id="logo_cocopeps">
+        <div>
             <a href="a-propos.html">A propos</a>
+            <a href="a-propos.html">A propos</a>
+        </div>
+        </nav>
         </header>
         <body><!--ici c'est tout le contenu de la page-->
-            <h1>Bientôt le meilleur (ou pas ...)</h1>
+            <p>Page en cours de construction</p>
         </body>
+    <footer><!--Le pied de page-->
+
+    </footer>
 </html>
