--- a/a-propos.html
+++ b/a-propos.html
@@ -2,11 +2,28 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>CocoPeps c'est qui ?</title>
-        <link rel="stylesheet" href="styles.css">
+        <title>CocoPeps Acceuil</title>
+        <link rel="stylesheet" href="style/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     </head>
         <header> <!--Ici c'est l'entete de page-->
-            <a href="index.html">Acceuil</a>
+        <nav><!--utile pour préciser la barre de navigation-->
+            <a href="index.html">
+                <img src="images/logo_cocopepsx45.png" alt="Logo CocoPeps"></a>
+        <div>
+            <a href="index.html" class="nav-menu">Acceuil</a>
+            <a href="a-propos.html" class="nav-menu">A propos</a>
+            <a href="mes-projets.html" class="nav-menu">Mes projets</a>
+        </div>
+        <div>
+        <a href="https://www.linkedin.com/in/corentin-ma/" class="nav-reseaux">
+            <img src="images/linkedin-ico.png" alt="logo linkedin"></a>
+        <a href="https://github.com/CocoPepss" class="nav-reseaux">
+            <img src="images/github-ico.png" alt="logo github"></a>
+        </div>
+        </nav>
         </header>
         <body><!--ici c'est tout le contenu de la page-->
             <p>Jeune dynamique et motivé ... </br>Euh pardon ; moi c'est Corentin, j'adore l'informatique et j'aimerais en faire mon métier alors j'apprend à coder et c'est marrant mdr !</p>
